@@ -1,3 +1,9 @@
+2007-09-01  Marcos David Marín Amador <MarcosMarin@gmail.com> 
+
+	* Compiler/GNUCompiler.cs: Fixed ccache implementation, though I'm still not
+	  sure if ccache should be used in the linking stage (Its currently not
+	  used, and I think thats correct).
+
 2007-08-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 
 
 	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
